--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.android.support:design:28.0.0'
-    implementation 'com.parse:parse-livequery-android:1.0.4' // für Parse Life Query. Zur Implementierung der Chatfunktion über ein Websocket
+    implementation 'com.parse:parse-livequery-android:1.0.4'
+    // für Parse Life Query. Zur Implementierung der Chatfunktion über ein Websocket
     implementation 'com.android.support:recyclerview-v7:28.0.0' // dir Recyclerview wird für die Chatfunktion benötigt
 }
