--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".Splash">
+        <activity android:name=".view.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -20,14 +20,14 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".MainActivity"
+                android:name=".view.MainActivity"
                 android:windowSoftInputMode="stateAlwaysHidden">
         </activity>
-        <activity android:name=".Login">
+        <activity android:name=".view.Login">
         </activity>
-        <activity android:name=".SignUp">
+        <activity android:name=".view.SignUp">
         </activity>
-        <activity android:name=".Profile">
+        <activity android:name=".view.Profile">
         </activity>
     </application>
 
