Added AddEvent Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
         </activity>
         <activity android:name=".view.Profile">
         </activity>
+        <activity android:name=".view.AddEvent">
+        </activity>
     </application>
 
 </manifest>
