--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
         </activity>
         <activity android:name=".view.AddEvent">
         </activity>
+        <activity android:name=".view.EditEvent">
+        </activity>
     </application>
 
 </manifest>
